--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Página Inicial</h1>
-    <p>Bem-vindo à página inicial!</p>
+    <p>Bem-vindo à loja da Helo!</p>
 
     <h1>Buscar Produto</h1>
     <a href="/buscar">Buscar Produto</a>    
