--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>FIAP - Loja Virtual</title>
 </head>
 <body>
-    <h1>Página Inicial</h1>
+    <h1>Larari Larara Store </h1>
     <p>Bem-vindo à loja da Helo!</p>
 
     <h1>Buscar Produto</h1>
